crates/keron-lang/tests/corpus/errors/check/for_list_with_pair.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `for (k, v) in …` expects `Map<K, V>`; use `for x in …` to iterate `List<Int>`
  --> 3:15
  |
3 | for (k, v) in xs {
  |               ^^
